--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
-  "dependencies": {},
+  "name": "apt-hooks",
+  "description": "一个适用于react16.8以上版本的公共hooks库",
+  "version": "1.0.0",
+  "main": "src/index.ts",
+  "scripts": {
+    "test": "npm run test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Apipost-Team/apt-hooks.git"
+  },
+  "author": "Apipost-Team",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/Apipost-Team/apt-hooks/issues"
+  },
+  "homepage": "https://github.com/Apipost-Team/apt-hooks#readme",
   "devDependencies": {
     "react": "^18.2.0",
     "lodash": "^4.17.21"
