--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: 16
           registry-url: https://registry.npmjs.org/
       - name: Install dependencies and build
-        run: npm install --force
+        run: npm install --force && npm run build
       - name: Publish package on NPM
         run: npm publish
         env:
